--- a/Angular50Examples/index.html
+++ b/Angular50Examples/index.html
@@ -26,6 +26,14 @@
         return {
           list: function(callback){
             $http.get('countries.json').success(callback);
+          },
+          find: function(name, callback){
+            $http.get('countries.json').success(function(data){
+              var country = data.filter(function(entry){
+                return entry.name === name;
+              })[0];
+              callback(country);
+            });
           }
         };
       });
@@ -36,11 +44,10 @@
         });
       });
 
-      countryApp.controller('CountryDetailCtrl', function ($scope, $routeParams, $http){
-        $http.get('countries.json').success(function(data) {
-          $scope.country = data.filter(function(entry){
-            return entry.name === $routeParams.countryName
-          })[0];
+      countryApp.controller('CountryDetailCtrl', function ($scope, $routeParams, countries){
+        countries.find($routeParams.countryName, function(country){
+          $scope.country = country;
+   
         });
       });
     </script>
