#44. Creating a custom filter to encode URIs

--- a/Angular50Examples/index.html
+++ b/Angular50Examples/index.html
@@ -58,6 +58,10 @@
 
       });
     });
+
+    countryApp.filter('encodeURI', function(){
+      return window.encodeURI;
+    });
   </script>
 </head>
 <body>
