--- a/Angular50Examples/country-list.html
+++ b/Angular50Examples/country-list.html
@@ -1,5 +1,5 @@
 <ul>
   <li ng-repeat="country in countries">
-    <a href="#/{{country.name}}">{{country.name}}</a>
+    <a href="#/{{country.name | encodeURI }}">{{country.name}}</a>
   </li>
 </ul>
