--- a/Angular50Examples/index.html
+++ b/Angular50Examples/index.html
@@ -24,24 +24,21 @@
 
     countryApp.factory('countries', function($http){
 
-      function getData(callback){
-        $http({
-          method: 'GET',
-          url: 'countries.json',
-          cache: true
-        }).success(callback);
-
-      }
-
       return {
-        list:getData,
-        find:function(name,callback){
-          getData(function(data){
-            var country = data.filter(function(entry){
-              return entry.name === name;
-            })[0];
-            callback(country);
-          });
+        list:function(callback){
+          $http({
+            method: 'GET',
+            url: 'countries.json',
+            cache: true
+          }).success(callback);
+        },
+
+        find:function(id,callback){
+          $http({
+            method:'GET',
+            url: 'country_' + id + '.json',
+            cache:true
+          }).success(callback);
         }
       };
     });
@@ -53,14 +50,10 @@
     });
 
     countryApp.controller('CountryDetailCtrl', function ($scope, $routeParams, countries){
-      countries.find($routeParams.countryName, function(country){
+      countries.find($routeParams.countryId, function(country){
         $scope.country = country;
 
       });
-    });
-
-    countryApp.filter('encodeURI', function(){
-      return window.encodeURI;
     });
   </script>
 </head>
