--- a/Angular50Examples/index.html
+++ b/Angular50Examples/index.html
@@ -1,63 +1,61 @@
 <html ng-app="countryApp">
-<head>
-  <meta charset="utf-8">
-  <title>Angular.js Example</title>
-  <script src="//cdnjs.cloudflare.com/ajax/libs/angular.js/1.2.10/angular.min.js"></script>
-  <script src="//cdnjs.cloudflare.com/ajax/libs/angular.js/1.2.10/angular-route.min.js"></script>
-  <script>
-    var countryApp = angular.module('countryApp', ['ngRoute']);
+  <head>
+    <meta charset="utf-8">
+    <title>Angular.js Example</title>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/angular.js/1.2.10/angular.min.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/angular.js/1.2.10/angular-route.min.js"></script>
+    <script>
+      var countryApp = angular.module('countryApp', ['ngRoute']);
 
-    countryApp.config(function($routeProvider) {
-      $routeProvider.
-      when('/', {
-        templateUrl: 'country-list.html',
-        controller: 'CountryListCtrl'
-      }).
-      when('/:countryName', {
-        templateUrl: 'country-detail.html',
-        controller: 'CountryDetailCtrl'
-      }).
-      otherwise({
-        redirectTo: '/'
+      countryApp.config(function($routeProvider) {
+        $routeProvider.
+          when('/', {
+            templateUrl: 'country-list.html',
+            controller: 'CountryListCtrl'
+          }).
+          when('/:countryId', {
+            templateUrl: 'country-detail.html',
+            controller: 'CountryDetailCtrl'
+          }).
+          otherwise({
+            redirectTo: '/'
+          });
       });
-    });
 
-    countryApp.factory('countries', function($http){
-
-      return {
-        list:function(callback){
-          $http({
-            method: 'GET',
-            url: 'countries.json',
-            cache: true
-          }).success(callback);
-        },
-
-        find:function(id,callback){
-          $http({
-            method:'GET',
-            url: 'country_' + id + '.json',
-            cache:true
-          }).success(callback);
-        }
-      };
-    });
-
-    countryApp.controller('CountryListCtrl', function ($scope, countries){
-      countries.list(function(countries) {
-        $scope.countries = countries;
+      countryApp.factory('countries', function($http){
+        return {
+          list: function (callback){
+            $http({
+              method: 'GET',
+              url: 'countries.json',
+              cache: true
+            }).success(callback);
+          },
+          find: function(id, callback){
+            $http({
+              method: 'GET',
+              url: 'country_' + id + '.json',
+              cache: true
+            }).success(callback);
+          }
+        };
       });
-    });
 
-    countryApp.controller('CountryDetailCtrl', function ($scope, $routeParams, countries){
-      countries.find($routeParams.countryId, function(country){
-        $scope.country = country;
-
+      countryApp.controller('CountryListCtrl', function ($scope, countries){
+        countries.list(function(countries) {
+          $scope.countries = countries;
+        });
       });
-    });
-  </script>
-</head>
-<body>
-  <div ng-view></div>
-</body>
+
+      countryApp.controller('CountryDetailCtrl', function ($scope, $routeParams, countries){
+        countries.find($routeParams.countryId, function(country) {
+          $scope.country = country;
+        });
+      });
+
+    </script>
+  </head>
+  <body>
+    <div ng-view></div>
+  </body>
 </html>
