#47. Adding a controller to our custom directive

--- a/Angular50Examples/index.html
+++ b/Angular50Examples/index.html
@@ -47,7 +47,10 @@
             country: '='
           },
           restrict: 'A',
-          templateUrl:'country.html'
+          templateUrl:'country.html',
+          controller:function($scope, countries){
+            console.log($scope.country);
+          }
         }
       });
 
