#48. Fetching data within custom directives -adding flags to the country listing.

--- a/Angular50Examples/index.html
+++ b/Angular50Examples/index.html
@@ -49,7 +49,9 @@
           restrict: 'A',
           templateUrl:'country.html',
           controller:function($scope, countries){
-            console.log($scope.country);
+            countries.find($scope.country.id, function(country){
+              $scope.flagURL = country.flagURL;
+            });
           }
         }
       });
