--- a/Angular50Examples/index.html
+++ b/Angular50Examples/index.html
@@ -2,10 +2,12 @@
   <head>
     <meta charset="utf-8">
     <title>Angular.js Example</title>
+
     <script src="//cdnjs.cloudflare.com/ajax/libs/angular.js/1.2.10/angular.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/angular.js/1.2.10/angular-route.min.js"></script>
-    <script src="countryController.js"> </script>
-    <script type="text/javascript" src="app.js"></script>
+
+    <script src="countryControllers.js"></script>
+    <script src="app.js"></script>
   </head>
   <body>
     <div ng-view></div>
