--- a/Angular50Examples/index.html
+++ b/Angular50Examples/index.html
@@ -7,6 +7,8 @@
     <script src="//cdnjs.cloudflare.com/ajax/libs/angular.js/1.2.10/angular-route.min.js"></script>
 
     <script src="countryControllers.js"></script>
+     <script src="countriesFactory.js"></script>
+     <script src="countryDirective.js"></script>
     <script src="app.js"></script>
   </head>
   <body>
