js_algorithms/ queue_errors
inner is: undefined

--- a/JS_Algorithms/Queue/runQueue.html
+++ b/JS_Algorithms/Queue/runQueue.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html>
+
 <head>
 	<title>Run Queue</title>
 	<script type="text/javascript" src="queue.js"></script>
 </head>
+
 <body>
 
 	<!-- test queue.js -->
@@ -32,5 +34,14 @@
 		// priorityQueue.enqueue("huahua",1);
 		// priorityQueue.print();
 	</script>
+
+	<!--test for hotPotato.js-->
+	<script src="hotPotato.js"></script>
+	<script>
+	var name = ['feifei', 'huahua','jiajia','doudou','hiahia'];
+	var winner = hotPotato(name,7);
+	console.log("winner is: " + winner);
+	</script>
 </body>
+
 </html>
