--- a/JS_Algorithms/Queue/runQueue.html
+++ b/JS_Algorithms/Queue/runQueue.html
@@ -23,23 +23,24 @@
 	<!-- test for PriorityQueue.js -->
 	<script type="text/javascript" src="priorityQueue.js"></script>
 	<script type="text/javascript">
+	console.log("2222");
 		var priorityQueue = new PriorityQueue();
 		console.log(priorityQueue.isEmpty());
 		priorityQueue.enqueue("jiajia", 1);
 		console.log(priorityQueue.isEmpty());
 		priorityQueue.dequeue();
 		console.log(priorityQueue.isEmpty());
-		// priorityQueue.enqueue("moss" ,2);
-		// priorityQueue.enqueue("jiajia", 1);
-		// priorityQueue.enqueue("huahua",1);
-		// priorityQueue.print();
+		priorityQueue.enqueue("moss" ,2);
+		priorityQueue.enqueue("jiajia", 1);
+		priorityQueue.enqueue("huahua",1);
+		priorityQueue.print();
 	</script>
 
 	<!--test for hotPotato.js-->
 	<script src="hotPotato.js"></script>
 	<script>
-	var name = ['feifei', 'huahua','jiajia','doudou','hiahia'];
-	var winner = hotPotato(name,7);
+	var names = [11, 22,33,44,55];
+	var winner = hotPotato(names,7);
 	console.log("winner is: " + winner);
 	</script>
 </body>
