anchors attribute is useful
// controlArrows:false,
             // verticalCentered:false,
             // resize: true,
             // srollingSpeed:2000,
             anchors:['page1','page2','page3','page4']

--- a/fullPageJS/index.html
+++ b/fullPageJS/index.html
@@ -36,7 +36,12 @@
    <script>
     $(document).ready(function(){
         $('#fullpage').fullpage({
-            sectionsColor:['green', 'orange', 'gray','red']
+            sectionsColor:['green', 'orange', 'gray','red'],
+             // controlArrows:false,
+             // verticalCentered:false,
+             // resize: true,
+             // srollingSpeed:2000,
+             anchors:['page1','page2','page3','page4']
         });
     });
 </script>
