--- a/fullPageJS/example.html
+++ b/fullPageJS/example.html
@@ -8,35 +8,81 @@
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/2.8.2/jquery.fullPage.min.css">
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
-<body>
-	<div id="fullpage">
-		<div class="section  "><h1>Section01</h1></div>
-		<div class="section  ">
-			<div class="slide">slide01</div>
-			<div class="slide">slide02</div>
-			<div class="slide">slide03</div>
-			<div class="slide">slide04</div>
+<body  >
+	<div id="fullPage">
+		<div class="section section1">
+			<h1>它，终于来了。</h1>
+			<p>
+				为了充分发挥体积小巧以及佩戴于手腕的优势，Apple Watch带来全新的科技和互动方式。它可以让你更快速便捷地完成早已习惯的事，
+				也可以实现过去根本无法企及的新功能。因此，这将会是焕然一新的使用体验，也将实现与你前所未有的贴近。
+			</p>
+			<a href="#">进一步了解</a>
 		</div>
-		<div class="section  "><h1>Section03</h1></div>
-		<div class="section  "><h1>Section04</h1></div>
+		<div class="section section2">
+			<h1>真正与你贴近的个人设备</h1>
+			<a href="#">进一步了解</a>
+		</div>
+		<div class="section section3">
+			<h1>非同一般的精准计时</h1>
+			<p>
+				高级手表向来计时精准为本，Apple Watch更是如此，它与你的iPhone配合使用，同全球标准时间的误差不超过50毫秒。而且你可以对
+				表盘进行个性化设定，以更具个性和意义的方式显示时间，使其更贴合你的生活和日程需要。
+			</p>
+			<a href="#">进一步了解计时</a>
+		</div>
+		<div class="section section4">
+			<h1>在三个特点鲜明的系列中找到你的风格</h1>
+			<div class="row">
+				<div class="column">
+					<img src="img/primary_large_2x.jpg" class="primary">
+					<h4 class="primary"></h4>
+					<div class="intro">
+						<p>
+							不锈钢或深空黑色不锈钢表壳，蓝宝石水晶镜面，搭配多款时尚表带
+						</p>
+						<a href="#" class="more">了解更多</a>
+					</div>
+				</div>
+				<div class="column">
+					<img src="img/sport_large_2x.jpg" class="sport">
+					<h4 class="sport"></h4>
+					<div class="intro">
+						<p>
+							银色或深空灰色的阳极氧化铝金属表壳，强化Ion-X玻璃，搭配亮丽柔韧的表带
+						</p>
+						<a href="#" class="more">了解更多</a>
+					</div>
+				</div>
+				<div class="column">
+					<img src="img/edition_large_2x.jpg" class="edition">
+					<h4 class="edition"></h4>
+					<div class="intro">
+						<p>
+							18K黄金或玫瑰金表壳，蓝宝石水晶镜面，搭配精雕细琢的表带及表扣
+						</p>
+						<a href="#" class="more">了解更多</a>
+					</div>
+				</div>
+			</div>
+		</div>
 	</div>
 
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.3/jquery.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/2.7.9/jquery.fullPage.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/move.js/0.5.0/move.min.js"></script>
 
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/2.8.2/jquery.fullPage.js"></script>
 	<script>
 		$(document).ready(function(){
-			$('#fullpage').fullpage({
-				sectionsColor:['green', 'orange', 'gray','red'],
-				anchors:['page1','page2','page3','page4'],
-             continuousVertical: true, //default is false
-             menu: '#fullpageMenu',
-             navigation:true,
-             navigationPosition: 'right',
-             navigationTooltips:['page1','page2','page3','page4'],
-             slidesNavigation: true, //default is false
-             slidesNavPosition: 'bottom', ////default is bottom
-         });
+			$('#fullPage').fullpage({
+				verticalCentered: false,
+        //sectionsColor: ['aqua','crimson','green','darkviolet'],
+        anchors: ['page1','page2','page3','page4'],
+        navigation: true,
+        navigationTooltips: ['它，终于来了','真正与你贴近的个人设备','非同一般的精准计时','在三个特点鲜明的系列中找到你的风格'],
+        
+    })
+
+
 		});
 	</script>
 </body>
