--- a/fullPageJS/example.html
+++ b/fullPageJS/example.html
@@ -93,19 +93,17 @@
         		move('.section3 p').set('margin-left','20%').end();
         		break;
         		case 4:
-        		move('section4 img.primary').totate(360).end(function(){
-        			move('section4 img.sport').rotate(360).end(funtion(){
-        				move('section4 img.edition').rotate(360).end(function(){
-        					move('.section4 h4.primary').scale(1.3).end(function(){
-        						move('.section4 h4.sport').scale(1.3).end(function(){
-        							move('.section4 h4.edition').scale(1.3).end();
+        		move('.section4 img.primary').rotate(360).end(function(){
+        			move('.section4 img.sport').rotate(360).end(function(){
+        				move('.section4 img.edition').rotate(360).end(function(){
+        					move('.section4 h4.primary').scale(1.2).end(function(){
+        						move('.section4 h4.sport').scale(1.2).end(function(){
+        							move('.section4 h4.edition').scale(1.2).end();
         						});
         					});
         				});
         			});
         		});
-        
-
         		break;
         	}
         },
