--- a/webpackSampleProject/public/index.html
+++ b/webpackSampleProject/public/index.html
@@ -5,11 +5,13 @@
     <title>Webpack Sample Project</title>
   </head>
   <body>
-    <div id='root'>
-        <p>
+            <p>
             the only propose of this file is to load bundle.js
+            try again
         </p>
+    <div id='root'>
+
     </div>
-    <script src="bundle.js"></script>
+    <script src="./../bundle.js"></script>
   </body>
 </html>
