--- a/D3JS/d3_basic.html
+++ b/D3JS/d3_basic.html
@@ -1,7 +1,9 @@
 <html>
+
 <head>
     <script src="d3.js"></script>
 </head>
+
 <body>
     <h3>svg demo</h3>
     <svg>
@@ -16,5 +18,128 @@
             .attr("height", 200)
             .style("fill", "blue");
     </script>
+
+    <h3>d3 demo 2.0</h3>
+    <p> all columns are in the same place</p>
+    <script>
+        var w = 200;
+        var h = 100;
+        var padding = 2;
+        var dataset = [5, 10, 15, 20, 25];
+        var svg = d3.select("body")
+            .append("svg")
+            .attr("width", w)
+            .attr("height", h);
+
+        svg.selectAll("rect")
+            .data(dataset)
+            .enter()
+            .append("rect")
+            .attr("x", 0) 
+            .attr("y", 0)
+            .attr("width", 20)
+            .attr("height", 100)
+    </script>
+
+    <h3>d3 demo 2.1</h3>
+    <p>columns are with same height but different x</p>
+
+    <script>
+        var w = 200;
+        var h = 100;
+        var padding = 2;
+        var dataset = [5, 10, 15, 20, 25];
+        var svg = d3.select("body")
+            .append("svg")
+            .attr("width", w)
+            .attr("height", h);
+
+        svg.selectAll("rect")
+            .data(dataset)
+            .enter()
+            .append("rect")
+            .attr("x", function (data, index) {
+                return (index * 21)
+            })
+            .attr("y", 0)
+            .attr("width", 20)
+            .attr("height", 100)
+    </script>
+
+    <h3>d3 demo 2.2</h3>
+    <script>
+        var w = 200;
+        var h = 100;
+        var padding = 2;
+        var dataset = [5, 10, 15, 20, 25];
+        var svg = d3.select("body")
+            .append("svg")
+            .attr("width", w)
+            .attr("height", h);
+
+        svg.selectAll("rect")
+            .data(dataset)
+            .enter()
+            .append("rect")
+            .attr("x", function (data, index) {
+                return (index * (w/dataset.length))
+            })
+            .attr("y", 0)
+            .attr("width", w/dataset.length - padding)
+            .attr("height", 100)
+    </script>
+
+        <h3>d3 demo 2.3</h3>
+    <script>
+        var w = 200;
+        var h = 100;
+        var padding = 2;
+        var dataset = [5, 10, 15, 20, 25];
+        var svg = d3.select("body")
+            .append("svg")
+            .attr("width", w)
+            .attr("height", h);
+
+        svg.selectAll("rect")
+            .data(dataset)
+            .enter()
+            .append("rect")
+            .attr("x", function (data, index) {
+                return (index * (w/dataset.length))
+            })
+            .attr("y", 0)
+            .attr("width", w/dataset.length - padding)
+            .attr("height", function(d){
+                return d; //loop through data set
+            })
+    </script>
+
+    <h3>d3 demo 2.4</h3>
+    <script>
+        var w = 200;
+        var h = 100;
+        var padding = 2;
+        var dataset = [5, 10, 15, 20, 25];
+        var svg = d3.select("body")
+            .append("svg")
+            .attr("width", w)
+            .attr("height", h);
+
+        svg.selectAll("rect")
+            .data(dataset)
+            .enter()
+            .append("rect")
+            .attr("x", function (data, index) {
+                return (index * (w/dataset.length))
+            })
+            .attr("y", function(d, i){
+                return h - (d*4);
+            })
+            .attr("width", w/dataset.length - padding)
+            .attr("height", function(d){
+                return (d*4); //loop through data set
+            })
+    </script>
 </body>
+
 </html>
