d3 official tutorial, introduction

--- a/D3JS/d3_basic.html
+++ b/D3JS/d3_basic.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-    <scirpt src="https://cdnjs.cloudflare.com/ajax/libs/d3/4.7.3/d3.min.js"></scirpt>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/4.7.3/d3.min.js"></script>
     <script src="d3.js"></script>
 </head>
 
